--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ select = ["E", "F", "I001"]
 ignore = ["E402", "E721", "E731", "E741", "F722"]
 ignore-init-module-imports = true
 fixable = ["I001", "F401"]
+line-length = 119
 
 [tool.ruff.isort]
 combine-as-imports = true
